# words_similarity

./: .gitignore  README.md  base.py  keyword_extraction.py  pyproject.toml  similarity.py
