[tool.poetry]
name = "words_similarity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gensim = "^4.1.2"
fasttext = "^0.9.2"
yake = "^0.4.8"
beautifulsoup4 = "^4.10.0"
readability-lxml = "^0.8.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
